--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,10 +25,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t
-           jusangbokhap:${{ github.sha }}
-           .
-           docker tag jusangbokhap:${{ github.sha }} jusangbokhap:lastest
+          docker build -t jusangbokhap:${{ github.sha }} . docker tag jusangbokhap:${{ github.sha }} jusangbokhap:latest
 
       - name: Deploy to Dev Server
         uses: appleboy/ssh-action@master
