--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
-version: '3'
+version: '3.8'
 services:
   app:
-    build: .
+    container_name: jusangbokhap-app
+    image: ${DOCKERHUB_USERNAME}/jusangbokhap:latest
+    env_file:
+      - .env
     ports:
       - "8080:8080"
     environment:
       SPRING_PROFILES_ACTIVE: dev
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/jusangbokhap
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: postgres
+      SPRING_DATASOURCE_USERNAME: ${DB_USERNAME:-postgres}
+      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD:-postgres}
     deploy:
       resources:
         limits:
@@ -19,12 +22,14 @@ services:
 
   db:
     image: postgres:17
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     environment:
       - POSTGRES_DB=jusangbokhap
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=${DB_USERNAME:-postgres}
+      - POSTGRES_PASSWORD=${DB_PASSWORD:-postgres}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
