--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,9 +41,16 @@ spring:
   datasource:
     url: jdbc:postgresql://${DB_HOST}:5432/${DB_NAME}
     username: ${DB_USERNAME}
-    password: ${DB_PASSWROD}
+    password: ${DB_PASSWORD}
     hikari:
       driver-class-name: org.postgresql.Driver
+      maximum-pool-size: 5
+      minimum-idle: 1
+      idle-timeout: 300000
   jpa:
     hibernate:
       ddl-auto: validate
+    show-sql: false
+
+server:
+  port: 8080
