--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,7 +41,7 @@ jobs:
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           IMAGE_NAME: jusangbokhap
-          IMAGE_TAG: ${{ github.sha }}
+          IMAGE_TAG: ${GITHUB_SHA::7}
         run: |
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest .
