--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,8 +41,8 @@ jobs:
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           IMAGE_NAME: jusangbokhap
-          IMAGE_TAG: ${GITHUB_SHA::7}
         run: |
+          SHORT_SHA=$(echo ${{ github.sha }} | cut-c1-7)
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest .
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:$IMAGE_TAG
