--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,12 +37,16 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Generate short SHA
+        id: vars
+        run: echo "sha_short=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           IMAGE_NAME: jusangbokhap
+          IMAGE_TAG: ${{ steps.vaars.outputs.sha_short }}
         run: |
-          SHORT_SHA=$(echo ${{ github.sha }} | cut-c 1-7)
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest .
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:$IMAGE_TAG
