--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -45,7 +45,7 @@ jobs:
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           IMAGE_NAME: jusangbokhap
-          IMAGE_TAG: ${{ steps.vaars.outputs.sha_short }}
+          IMAGE_TAG: ${{ steps.vars.outputs.sha_short }}
         run: |
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest .
