--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,10 +43,11 @@ jobs:
 
       - name: Build and push Docker image
         env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_USERNAME: jinho7329@gmail.com
           IMAGE_NAME: jusangbokhap
           IMAGE_TAG: ${{ steps.vars.outputs.sha_short }}
         run: |
+          echo "Image tag: $IMAGE_TAG"
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
           docker build -t $DOCKERHUB_USERNAME/$IMAGE_NAME:latest .
           docker push $DOCKERHUB_USERNAME/$IMAGE_NAME:$IMAGE_TAG
