fix: modify Docker image tag format in CD workflow
- IMAGE_TAG 디버깅용 출력 추가
- DOCKERHUB_USERNAME 계정 직접 입력 -> 이메일 주소가 아닌 프로필 이름으로 변경 후 시크릿 재등록

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Build and push Docker image
         env:
-          DOCKERHUB_USERNAME: jinho7329@gmail.com
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           IMAGE_NAME: jusangbokhap
           IMAGE_TAG: ${{ steps.vars.outputs.sha_short }}
         run: |
