--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,7 +22,10 @@ jobs:
           cache: gradle
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: |
+          ./gradlew clean
+          ./gradlew build
+        
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
