fix: cd.yml Deploy to Dev Server 도커 기존 이미지 강제 삭제 부분 추가

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -65,5 +65,6 @@ jobs:
             cd /home/ec2-user/jusangbokhap
             docker-compose pull
             docker-compose down
+            docker rm -f jusangbokhap-app || true
             docker-compose up -d
             docker image prune -f
