--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,31 @@
 spring:
   application:
     name: Jusangbokhap
+  output:
+    ansi:
+      enabled: always
+
+  sql:
+    init:
+      mode: always
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/Jusangbokhap
+    username: root
+    password: root1234!@
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    defer-datasource-initialization: true
+
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/chatdb
+
+  redis:
+    host: localhost
+    port: 6379
