--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,38 @@
 spring:
   application:
     name: Jusangbokhap
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  redis:
+    host: localhost
+    port: 6379
+    timeout: 60000
+
+  server:
+    port: 8080
+
+logging:
+  file:
+    name: logs/application.log
+  level:
+    root: INFO
+    org.springframework: DEBUG
+
+kakao:
+  api:
+    admin-key: ""
+    cid: "TC0ONETIME"
+    approval-url: "https://frontend.com/payments/approve"
+    cancel-url: "https://frontend.com/payments/cancel"
+    fail-url: "https://frontend.com/payments/fail"
+
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
