--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,8 @@ spring:
   data:
     mongodb:
       uri: mongodb://root:root@localhost:27017/chatdb?authSource=admin
+      username: root
+      password: root
       auto-index-creation: true
 
   redis:
