--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,41 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.2'
 	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.sonarqube' version "4.4.1.3373"
+	id 'jacoco'
 }
 
 group = 'jsbh'
 version = '0.0.1-SNAPSHOT'
+
+jacoco {
+	toolVersion = "0.8.9"
+}
+
+jacocoTestReport {
+	reports {
+		xml.required = true
+		html.required = true
+	}
+}
+
+test {
+	finalizedBy jacocoTestReport
+	jacoco {
+		destinationFile = file("${buildDir}/jacoco/test.exec")
+	}
+}
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "jusangbokhap"
+		property "sonar.organization", "jusangbokhap"
+		property "sonar.host.url", "https://sonarcloud.io"
+		property "sonar.sourceEncoding", "UTF-8"
+		property "sonar.java.source", "17"
+		property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+	}
+}
 
 java {
 	toolchain {
@@ -27,12 +58,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 }
 
 tasks.named('test') {
