--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,8 @@ on:
       - "main"
       - "dev"
       - "KR-123-chore/kr-123"
+    paths-ignore:
+      - '.github/workflows/**'
 
   workflow_dispatch:
 
