--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ test {
 sonarqube {
 	properties {
 		property "sonar.projectKey", "jusangbokhap"
-		property "sonar.organization", "jusangbokhap"
+		property "sonar.organization", "Jusangbokhap"
 		property "sonar.host.url", "https://sonarcloud.io"
 		property "sonar.sourceEncoding", "UTF-8"
 		property "sonar.java.source", "17"
