--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.2'
 	id 'io.spring.dependency-management' version '1.1.7'
-	id 'org.sonarqube' version "4.4.1.3373"
+	//id 'org.sonarqube' version "4.4.1.3373"
 	id 'jacoco'
 }
 
@@ -26,7 +26,7 @@ test {
 		destinationFile = file("${buildDir}/jacoco/test.exec")
 	}
 }
-
+/*
 sonarqube {
 	properties {
 		property "sonar.projectKey", "jusangbokhap"
@@ -37,7 +37,7 @@ sonarqube {
 		property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
 	}
 }
-
+*/
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
