fix: ci.yml sonar 부분 제거

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build, test and analyze
-        run: ./gradlew build test jacocoTestReport sonarqube --info
+        run: ./gradlew build test jacocoTestReport --info
 
       - name: Upload test results
         if: always()
