feat : 숙소 근처 시설 정보 조회 API 개발

--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,11 @@ dependencies {
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+	implementation "org.springframework.boot:spring-boot-starter-webflux"
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'
+
+	testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
 }
 
 tasks.named('test') {
