--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,15 @@ jobs:
       - name: Update kube config
         run: aws eks update-kubeconfig --region ${{ secrets.AWS_REGION }} --name $EKS_CLUSTER_NAME
 
+      - name: Create/Update k8s secrets
+        run: |
+          kubectl create secret generic jusangbokhap-secret \
+            --from-literal=POSTGRES_URL=${{ secrets.POSTGRES_URL }} \
+            --from-literal=POSTGRES_USER=${{ secrets.POSTGRES_USER }} \
+            --from-literal=POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} \
+            --from-literal=POSTGRES_DB=${{ secrets.POSTGRES_DB }} \
+            --dry-run=client -o yaml | kubectl apply -f -
+
       - name: Deploy to EKS
         run: |
           sed -i "s|image:.*|image: ${{ steps.login-ecr.outputs.registry }}/$ECR_REPOSITORY:${{ steps.vars.outputs.sha_short }}|" k8s/deployment.yml
