fix: deploy.yml, ci.yml paths-ignore 부분 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "dev" ]
   push:
     branches: [ "feat/**", "feature/**", "fix/**", "KR-123-chore/kr-123"]
+    paths-ignore:
+      - '.github/workflows/**'
 
 permissions:
   contents: read
